[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hex_flow_replay_e3_desktop"
version = "0.0.1-alpha.1"
authors = [{ name = "Dong Zhaorui", email = "847235539@qq.com" }]
description = "Hex Flow Replay for E3 Desktop"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "hex_flow_node_robot>=0.0.0,<0.1.0",
    "hex_flow_node_teleop>=0.0.0,<0.1.0",
    "hex_flow_node_mujoco>=0.0.0,<0.1.0",
    "hex_flow_node_data>=0.0.0,<0.1.0",
    "hex_util_data>=0.0.0,<0.1.0",
    "hex_util_robot>=0.0.0,<0.1.0",
]

[dependency-groups]
dev = ["pytest>=8.1.1", "ruff>=0.9.1"]

[project.scripts]
hex-flow-replay-e3-desktop = "hex_flow_replay_e3_desktop.main:main"

[tool.ruff.lint]
extend-select = [
    "D",    # pydocstyle
    "UP",   # Ruff's UP rule
    "PERF", # Ruff's PERF rule
    "RET",  # Ruff's RET rule
    "RSE",  # Ruff's RSE rule
    "NPY",  # Ruff's NPY rule
    "N",    # Ruff's N rule
    "I",    # Ruff's I rule
]
